--- a/src/uni.scss
+++ b/src/uni.scss
@@ -74,3 +74,8 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36upx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30upx;
+/* 商品 */
+$p-title: #474245;
+$p-desc: #969696;
+$theme-color: #ff4891;
+$theme-bg: #F5F7F9;
